--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <li><a class="active" href="index.html">Home</a></li>
       <li><a href="#selection-criteria">Selection Criteria</a></li>
       <li><a href="#courses">Courses</a></li>
-      <li style="float:right"><a  href="#About">About</a></li>
+      <li><a href="#timeline">Timeline</a></li>
+      <li style="float:right"><a  href="#footer">About</a></li>
     </ul>
   </div>
   <article class="row card">
@@ -40,8 +41,7 @@
         or Harvard.
       </p>
     </section>
-    <img class="column side" src="/assets/main_pic.png" alt="main_pic" title="in the park activity" width="500"
-      height="400" />
+    <img class="column side" src="/assets/main_pic.png" alt="main_pic" title="in the park activity" />
   </article>
   <article id="selection-criteria" class="row card">
     <section class="column content middle">
@@ -55,7 +55,7 @@
         participants with the following characteristics:
       </p>
     </section>
-    <img class="column side" src="/assets/park_pic.png" alt="park_pic" width="500" height="400" />
+    <img class="column side" src="/assets/park_pic.png" alt="park_pic"  />
   </article>
   <section class="row cards">
     <p class="card column">
@@ -89,7 +89,7 @@
     </section>
     <section class="column">
       <figure>
-        <img src="assets/classroom.png" alt="Classroom picture" width="400" height="300" />
+        <img src="assets/classroom.png" alt="Classroom picture"  />
         <figcaption>The students learn in high tech environment</figcaption>
       </figure>
     </section>
@@ -162,8 +162,8 @@
       academic success remotely, and enjoy their summer.
     </p>
   </Section>
-  <footer id=class="card row">
-    <div class="card row column">
+  <footer id="footer" class="card">
+    <div class="card row">
       <address >
         <h3>
           <a href="https://www.excellencecommunityschools.org">Excellence community schools</a> 
@@ -177,13 +177,13 @@
         </p>
       </address>
     </div>
-    <div class="card row column">
+    <div class="card row">
       <nav >
         <a href="https://www.excellencecommunityschools.org/applyforadmission">Admissions</a>
         <a href="/fs/pages/1226">Visit&nbsp;Our Blog</a>
       </nav>
     </div>
-    <div class="card row column">
+    <div class="card column">
       <p>
         Feedback:
         <a href="mailto:walsabahi@bronxexcellence.org?Subject=Hello" target="_blank">Say hi to the author</a>
