pictures in assests

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header">
     <a href="https://www.excellencecommunityschools.org"><img alt="" id="logo" role="presentation"
-        src="/assets/ECSLOGO.svg" width="300" /></a>
+        src="ECSLOGO.svg" width="300" /></a>
     <h2>VIRTUAL SUMMER IMMERSIVE PROGRAM</h2>
     <h3>Exposing scholars to the rigors of college academics</h3>
   </header>
@@ -89,7 +89,7 @@
     </section>
     <section class="column">
       <figure>
-        <img src="assets/classroom.png" alt="Classroom picture"  />
+        <img src="/assets/classroom.png" alt="Classroom picture"  />
         <figcaption>The students learn in high tech environment</figcaption>
       </figure>
     </section>
