ecs logo to asses

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <header class="header">
     <a href="https://www.excellencecommunityschools.org"><img alt="" id="logo" role="presentation"
-        src="ECSLOGO.svg" width="300" /></a>
+        src="/assets/ECSLOGO.svg" width="300" /></a>
     <h2>VIRTUAL SUMMER IMMERSIVE PROGRAM</h2>
     <h3>Exposing scholars to the rigors of college academics</h3>
   </header>
