remove / for the dir

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <header class="header">
     <a href="https://www.excellencecommunityschools.org"><img alt="" id="logo" role="presentation"
-        src="/assets/ECSLOGO.svg" width="300" /></a>
+        src="assets/ECSLOGO.svg" width="300" /></a>
     <h2>VIRTUAL SUMMER IMMERSIVE PROGRAM</h2>
     <h3>Exposing scholars to the rigors of college academics</h3>
   </header>
@@ -42,7 +42,7 @@
         or Harvard.
       </p>
     </section>
-    <img class="column side" src="/assets/mainpic.png" alt="main_pic" title="in the park activity" />
+    <img class="column side" src="assets/mainpic.png" alt="main_pic" title="in the park activity" />
   </article>
   <article id="selection-criteria" class="row card">
     <section class="column content middle">
@@ -56,7 +56,7 @@
         participants with the following characteristics:
       </p>
     </section>
-    <img class="column side" src="/assets/parkpic.png" alt="park_pic"  />
+    <img class="column side" src="assets/parkpic.png" alt="park_pic"  />
   </article>
   <section class="row cards">
     <p class="card column">
@@ -90,7 +90,7 @@
     </section>
     <section class="column">
       <figure>
-        <img src="/assets/classroom.png" alt="Classroom picture"  />
+        <img src="assets/classroom.png" alt="Classroom picture"  />
         <figcaption>The students learn in high tech environment</figcaption>
       </figure>
     </section>
