font and spilling

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <article class="row card">
     <section class="column content middle">
       <h3 class="article-title">Program Overview</h3>
-      <p id="content" class="card">
+      <p id="content" class="card content">
         Excellence Community Schools’ (ECS) Virtual Summer Immersive Program
         (VSIP) is an online program through which scholars select courses from
         a blend of content curated by ECS staff and some pre-built instruction
@@ -99,7 +99,7 @@
 
   <Section id="subject-list" class="cards">
     <details class="column card">
-      <summary>WEB DEVELOPMENT</summary>
+      <summary>Web Development</summary>
       <p>
         <code>HTML5</code> provides native support for video and audio
         without plug-ins] and supports offline applications, for games
@@ -140,7 +140,7 @@
       </p>
     </details>
     <details class="column card">
-      <summary>ENTREPRENEURSHIP</summary>
+      <summary>Entreprenuership</summary>
       <p>
         This course promotes innovation and encourages explo- ration of
         the various concepts in business ownership. Upon completion,
